--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
-<header>
+<!-- <header>
         <h1>Joni Innanen</h1>
 
         <div id="menu" class="fas fa-bars"></div>
@@ -28,7 +28,7 @@
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
-</header>
+</header> -->
 <!-- navbar ends -->
 
 <!-- 404 section start -->
@@ -45,7 +45,7 @@
           <div class="backbtn">
             <a href="/" class="btn">
                 <i class="fas fa-arrow-left"></i>
-                <span>Back to Home</span>
+               <!--  <span>Back to Home</span> -->
           </a>
           </div>
 
@@ -65,14 +65,14 @@
           <p>Connect with me over socials.</p>
       </div>
 
-      <div class="box">
+   <!--    <div class="box">
           <h3>quick links</h3>
           <a href="#home"><i class="fas fa-chevron-circle-right"></i> home</a>
           <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> education</a>
           <a href="#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
           <a href="#work"><i class="fas fa-chevron-circle-right"></i> Projects</a>
-      </div>
+      </div>   -->
 
       <div class="box">
           <h3>contact info</h3>
@@ -104,5 +104,6 @@
 
 </body>
 </html>
+
 
 
