--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Portfolio, Joni Innanen, CAD Engineer, CAD, Innanen, Joni, Virtual Reality, CAD to Virtual Reality, insinööri, engineer, finland, mechanical engineer finland, konetekniikan insinööri seinäjoki, insinööri innanen, insinööri joni innanen, msk cabins, msk group, volvo, volvo ce, unreal engine, industrial virtual reality, cad designer, cad specialist, mechanical design engineer, 3d modeling expert, product design engineer, engineering consultant, virtual reality designer, industrial design specialist, solidworks, autocad, fusion 360, catia, 3d rendering, cad to vr, unreal engine specialist, virtual prototyping, 3d visualization, engineering simulation, Mechanical Engineering Finland, Industrial Engineering, Virtual Factory Design, Concept Engineering, Product Development Engineer, Design for Manufacturing, CAD to Production Solutions, Engineering Solutions Finland, Industrial Virtual Prototyping, Joni Innanen Finland, Joni Innanen Seinäjoki, Joni Innanen Seinajoki, CAD Engineer Seinäjoki, Finnish CAD Specialist, Seinäjoki Engineering, Finland Engineering Talent, MSK Cabins Designer, Volvo CE Engineering, Automotive CAD Specialist, Heavy Machinery CAD, Construction CAD Engineering, Virtual Reality for Manufacturing" />
-    <meta name="description" content="Welcome to Joni's Portfolio. R&D Engineer and Developer." />
+    <meta name="description" content="Welcome to Joni's Portfolio." />
     <meta name="author" content="Joniinnanen.com">
 
     <!-- Custom CSS -->
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-    <title>Innanen Joni, R&D Engineer Portfolio</title>
+    <title>Joni Innanen</title>
 </head>
 	
 <body oncontextmenu="return false">
@@ -373,6 +373,7 @@ among the best in everything I do.</p>
 	
 </body>
 </html>
+
 
 
 
