--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         <img draggable="false" class="tilt" src="./assets/images/profile.png" alt="">
     </div>
     <div class="content">
-        <h3>I'm Joni</h3>
-        <span class="tag">Mechanical Engineer</span>
+        <h3>About</h3>
         
         <p>Joni Innanen is a distinguished engineer of industrial systems and global operations. An engineer by training, he has dedicated his career to mastering the art of scaling complexity into seamless, high-performance frameworks. From steering expansive international networks to engineering high-precision solutions for global OEM's, his track record is defined by a relentless pursuit of excellence and proactive foresight. Today, he is shaping the future of industrial integrity, ensuring that strategic vision and technical mastery unite to drive the next era of global industry.</p>
         
@@ -250,6 +249,7 @@
 	
 </body>
 </html>
+
 
 
 
