--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!-- about section starts -->
 <section class="about" id="about">
-    <h2 class="heading"><i class="fas fa-user-alt"></i> About <span>Me</span></h2>
+    <h2 class="heading"><i class="fas fa-user-alt"></i> About</h2>
     
     <div class="row">
 
@@ -249,6 +249,7 @@
 	
 </body>
 </html>
+
 
 
 
