--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="content">
         <h3>About</h3>
         
-        <p>Joni Innanen is a distinguished engineer of industrial systems and global operations. An engineer by training, he has dedicated his career to mastering the art of scaling complexity into seamless, high-performance frameworks. From steering expansive international networks to engineering high-precision solutions for global OEM's, his track record is defined by a relentless pursuit of excellence and proactive foresight. Today, he is shaping the future of industrial integrity, ensuring that strategic vision and technical mastery unite to drive the next era of global industry.</p>
+        <p>Joni Innanen is a distinguished engineer of industrial systems and global operations. A mechanical engineer by training , he has dedicated his career to mastering the art of scaling complexity into seamless, high-performance frameworks. His professional philosophy is defined by proactive foresight, ensuring that the systems he builds today are resilient enough to secure the business continuity of tomorrow. He first established his reputation by bridging the gap between executive strategy and technical execution. By diagnosing critical operational bottlenecks and architecting sophisticated computational planning systems, he demonstrated a unique ability to optimize material flows and accelerate decision-making within demanding manufacturing environments. These early successes laid the foundation for his expertise in translating ambitious corporate goals into actionable, high-precision realities. His career reached a new plateau as he took the helm of expansive international networks, managing hundreds of technical contacts and steering the strategic scale-up of global data systems. By governing complex industrial landscapes with absolute precision, down to the most minute technical detail, he has delivered measurable business impact and secured high-value partnerships with global market leaders. His track record is defined by a rare combination of engineering rigor and the ability to manage large-scale, cross-functional adoptions. In a rapidly evolving global landscape, He is shaping the future of industrial integrity. He focuses on building the transparency and data-driven frameworks required to turn modern regulatory and technical challenges into a decisive competitive advantage. Today, he remains dedicated to ensuring that strategic vision and technical mastery unite to drive the next era of global industry.</p>
         
         <div class="box-container">
             <!-- <div class="box">
@@ -249,6 +249,7 @@
 	
 </body>
 </html>
+
 
 
 
